# rocq-typed-extraction

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  configure.sh  rocq-elm-extraction.opam  rocq-rust-extraction.opam  rocq-typed-extraction-common.opam  rocq-typed-extraction-plugin.opam  rocq-typed-extraction.opam
.github/: deps.opam.locked
.github/workflows/: build.yml  nix-action-9.0.yml  nix-action-9.1.yml
.nix/: config.nix
.nix/coq-overlays/TypedExtraction/: default.nix
common/: Makefile  _CoqProject
common/theories/: Common.v  PrettyPrinterMonad.v  StringExtra.v
doc/: header.html
doc/resources/coqdocjs/: coqdocjs.js
elm/: Makefile  _CoqProject  _CoqProject.in
elm/theories/: ElmExtract.v  PrettyPrinterMonad.v
plugin/: Makefile  RocqMakefile.local  _CoqProject  _CoqProject.in  _PluginProject  _PluginProject.in  process_extraction.sh  template-rocq-files.txt
plugin/src/: g_typed_extraction.mlg  typed_extraction_plugin.mlpack
plugin/theories/: ExtractExtraction.v  Loader.v
rust/: Makefile  _CoqProject  _CoqProject.in
rust/theories/: PluginExtract.v  PrettyPrinterMonad.v  RustExtract.v  TopLevelFixes.v
tests/: Makefile  _CoqProject  _CoqProject.in  process-extraction-examples.sh
tests/extracted-code/: .gitignore
tests/extracted-code/rust/: Ack.main  BernsteinYangTermination.main  Even.main
tests/theories/: BernsteinYangTermination.v  ElmExtractExamples.v  ElmExtractTests.v  ElmForms.v  InternalFix.v  RecordUpdate.v  RustExtractTests.v
