opam-version: "2.0"
name: "rocq-typed-extraction-common"
version: "dev"
synopsis: "Rocq extraction to Rust and Elm"
description: """
A framework for extracting Rocq programs to Rust and Elm
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/peregrine-project/rocq-typed-extraction"
dev-repo: "git+https://github.com/peregrine-project/rocq-typed-extraction.git"
bug-reports: "https://github.com/peregrine-project/rocq-typed-extraction/issues"
doc: "https://peregrine-project.github.io/rocq-typed-extraction/toc.html"

depends: [
  "rocq-core" {>= "9.0" & < "9.1~"}
  "rocq-stdlib" {>= "9.0" & < "9.1~"}
  "rocq-metarocq-utils" {>= "1.4"}
  "rocq-metarocq-common" {>= "1.4"}
  "rocq-metarocq-template" {>= "1.4"}
  "rocq-metarocq-template-pcuic" {>= "1.4"}
  "rocq-metarocq-pcuic" {>= "1.4"}
  "rocq-metarocq-safechecker" {>= "1.4"}
  "rocq-metarocq-erasure" {>= "1.4"}
]

build: [
  ["bash" "./configure.sh"]
  [make "-j" "%{jobs}%" "-C" "common"]
]

install: [
  [make "-C" "common" "install"]
]

tags: [
  "keyword:extraction"
  "logpath:TypedExtraction"
]
